k8s_Openshift-Kubernetes/hw_2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homework-2
  labels:
    project: homework-2-label
    environment: learning
