k8s_Openshift-Kubernetes/hw_2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-2
  namespace: homework-2
  labels:
  labels:
    app: web-service-2-lbl    # ← ЭТО НЕ ВАЖНО для связи Service с Pods
      # Эти labels используются для поиска/группировки сервисов
    # Могут быть ЛЮБЫМИ, не обязаны совпадать
spec:
  selector:
    app: web-app-2-sel-labl    # ← должно совпадать с labels Pod'ов в deployment.
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer  # ----- для получения EXTERNAL-IP
  #type: ClusterIP #---- это тип сервиса по умолчанию, который:
                  # Доступен только внутри кластера.
                  # Не получает внешний IP
                  # Используется для внутренней коммуникации между подами
