k8s_Openshift-Kubernetes/hw_2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-app-2
  namespace: homework-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-color-app.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service-2
            port:
              number: 8181
